--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
       "not dead",
       "not op_mini all"
     ],
+    "engines": { 
+      "node": "16.13.0" 
+    },
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
