--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^3.2.3",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.45.0",
     "styled-components": "^5.3.3"
   },
   "homepage": "https://RouberR.github.io",
@@ -38,8 +41,8 @@
       "not dead",
       "not op_mini all"
     ],
-    "engines": { 
-      "node": "16.13.0" 
+    "engines": {
+      "node": "16.13.0"
     },
     "development": [
       "last 1 chrome version",
